# python-project-50

./: .coverage  Makefile  README.md  coverage.xml  pyci.yml  pyproject.toml
.github/workflows/: hexlet-check.yml
gendiff/scripts/: gendiff.py
gendiff1/scripts/: gendiff.py
test/: test_1.py
tests/file_to_test/: 11.py  file1.json  file_recurse.json  file_recurse2.json
