[tool.poetry]
name = "hexlet-code"
version = "0.1"
description = "Compares two configuration files and shows a difference."
authors = ["Your Name <you@example.com>"]
license = "n"
readme = "README.md"
packages = [
  { include = "gendiff1" },
]
[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "gendiff1.scripts.gendiff:main"
